--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
-.forest-image {
+#content img {
     width: 300px; 
     height: 300px;
     border: 5px solid black; 
+}
+
+#content {
+    text-align: center;
+    background: rgb(86, 86, 255);
+    width: 30%;
+    padding: 35px 0px 35px 0px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 2;
+}
+
+body {
+    background: lightblue; 
+}
+
+.page1 {
+    position: absolute;
+    top: 35px;
+    left: 50%;
+    width: 30%;
+    height: 493px;
+    background-color: white;
+    z-index: 1;
 }
