--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
     padding: 35px 0px 35px 0px;
     margin-left: auto;
     margin-right: auto;
-    z-index: 2;
+    position: relative; 
+    z-index: 5;
+    border: 1px solid black;
 }
 
 body {
@@ -20,10 +22,44 @@ body {
 
 .page1 {
     position: absolute;
-    top: 35px;
-    left: 50%;
+    top: 8px;
+    left: 510px;
+    width: 30%;
+    height: 493px;
+    background-color: white;
+    z-index: 4;
+    border: 1px solid black;
+}
+
+.page2 {
+    position: absolute;
+    top: 8px;
+    left: 515px;
+    width: 30%;
+    height: 493px;
+    background-color: white;
+    z-index: 3;
+    border: 1px solid black;
+}
+
+.page3 {
+    position: absolute;
+    top: 8px;
+    left: 520px;
+    width: 30%;
+    height: 493px;
+    background-color: white;
+    z-index: 2;
+    border: 1px solid black;
+}
+
+.page4 {
+    position: absolute;
+    top: 8px;
+    left: 525px;
     width: 30%;
     height: 493px;
     background-color: white;
     z-index: 1;
+    border: 1px solid black;
 }
