--- a/style.css
+++ b/style.css
@@ -63,3 +63,10 @@ body {
     z-index: 1;
     border: 1px solid black;
 }
+
+
+.button {
+    margin-top: 325px;
+    margin-left: 30%;
+    margin-right: auto;
+}
